# brett-ai

./: README.md  pyproject.toml
brett/: main.py
brett/actions/: combat.py
