[tool.poetry]
name = "brett"
version = "0.1.0"
description = "GenAI homework."
authors = ["Brett Hovenkotter <bretth@slalom.com>"]

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.39.0"
typer = "^0.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
